--- a/package.json
+++ b/package.json
@@ -2,6 +2,11 @@
   "name": "react-production-app",
   "version": "1.0.0",
   "main": "index.js",
+  "scripts": {
+    "start": "webpack serve --env port=3000",
+    "build:prod": "webpack --env mode=production",
+    "build:dev": "webpack --env mode=development"
+  },
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^18.11.18",
@@ -12,6 +17,7 @@
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   }
 }
