--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
     "lint:ts": "eslint \"**/*.{ts,tsx}\"",
-    "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix"
+    "lint:ts:fix": "eslint \"**/*.{ts,tsx}\" --fix",
+    "lint:scss": "npx stylelint \"**/*.scss\"",
+    "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix"
   },
   "license": "MIT",
   "devDependencies": {
@@ -28,6 +30,7 @@
     "css-loader": "^6.7.3",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^34.0.0",
+    "eslint-plugin-i18next": "^6.0.0-2",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-promise": "^6.0.0",
@@ -39,6 +42,8 @@
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
+    "stylelint": "^15.0.0",
+    "stylelint-config-standard-scss": "^6.1.0",
     "ts-loader": "^9.4.2",
     "ts-node": "^10.9.1",
     "typescript": "*",
