--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,17 +1,37 @@
-name: GitHub Actions Demo
-on: [push]
+name: linting, testing, building
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
 jobs:
-  Explore-GitHub-Actions:
-    runs-on: ubuntu-latest
+  pipeline:
+    strategy:
+      matrix:
+        os: [ ubuntu-latest ]
+        node-version: [ 18.x ]
+    runs-on: ${{ matrix.os }}
+
     steps:
-      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
-        uses: actions/checkout@v3
-      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "🍏 This job's status is ${{ job.status }}."
+      - uses: actions/checkout@v2
+      - name: Setup Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: install modules
+        run: yarn
+      - name: build production project
+        run: yarn run build:prod
+      - name: linting typescript
+        run: yarn run lint:ts
+      - name: linting css
+        run: yarn run lint:scss
+      - name: unit testing
+        run: yarn run test:unit
+
+
+
+
+
+
+
