--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,9 @@
   "include": [
     "./config/jest/setupTests.ts",
     "./src/**/*.ts",
-    "./src/**/*.tsx"
+    "./src/**/*.tsx",
+    "./config/**/*.ts",
+    "./config/**/*.tsx",
+    "./webpack.config.ts"
   ]
 }
