add screenshot testing to ci

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,10 +28,7 @@ jobs:
         run: yarn run lint:scss
       - name: unit testing
         run: yarn run test:unit
-
-
-
-
-
-
-
+      - name: build storybook
+        run: yarn run storybook:build
+      - name: screenshot testing
+        run: yarn run test:ui:ci
