loki visual report tool

--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "test:ui": "yarn loki test",
     "test:ui:ok": "yarn loki approve",
     "test:ui:ci": "yarn loki --requireReference --reactUri file:./storybook-static",
+    "visual:report": "yarn run visual:report:json && yarn run visual:report:html",
+    "visual:report:json": "node scripts/generate-visual-json-report.js",
+    "visual:report:html": "reg-cli --from .loki/report.json --report .loki/report.html",
     "storybook": "start-storybook -p 6006 -c ./config/storybook",
     "storybook:build": "build-storybook -c ./config/storybook"
   },
@@ -64,6 +67,7 @@
     "mini-css-extract-plugin": "^2.7.2",
     "postcss": "^8.4.21",
     "react-refresh": "^0.14.0",
+    "reg-cli": "^0.17.7",
     "regenerator-runtime": "^0.13.11",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
