--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "test:ui": "yarn loki test",
     "test:ui:ok": "yarn loki approve",
     "test:ui:ci": "yarn loki --requireReference --reactUri file:./storybook-static",
-    "visual:report": "yarn run visual:report:json && yarn run visual:report:html",
+    "visual:report": "yarn run visual:report:json && yarn run visual:report:html && open-cli ./.loki/report.html",
     "visual:report:json": "node scripts/generate-visual-json-report.js",
     "visual:report:html": "reg-cli --from .loki/report.json --report .loki/report.html",
     "storybook": "start-storybook -p 6006 -c ./config/storybook",
@@ -68,6 +68,7 @@
     "json-server": "^0.17.2",
     "loki": "^0.31.0",
     "mini-css-extract-plugin": "^2.7.2",
+    "open-cli": "^7.1.0",
     "postcss": "^8.4.21",
     "react-refresh": "^0.14.0",
     "reg-cli": "^0.17.7",
