--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "visual:report": "yarn run visual:report:json && yarn run visual:report:html && open-cli ./.loki/report.html",
     "visual:report:json": "node scripts/generate-visual-json-report.js",
     "visual:report:html": "reg-cli --from .loki/report.json --report .loki/report.html",
-    "storybook": "start-storybook -p 6006 -c ./config/storybook",
-    "storybook:build": "build-storybook -c ./config/storybook",
+    "storybook": "start-storybook -p 6006 -c ./config/storybook -s ./public",
+    "storybook:build": "build-storybook -c ./config/storybook -s public",
     "prepare": "husky install"
   },
   "license": "MIT",
