--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "regenerator-runtime": "^0.13.11",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
+    "storybook-addon-mock": "^4.1.0",
     "style-loader": "^3.3.1",
     "stylelint": "^15.0.0",
     "stylelint-config-prettier": "^9.0.5",
