--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
       ]
     },
     "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true
+    "allowSyntheticDefaultImports": true,
+    "isolatedModules": true
   },
   "ts-node": {
     "compilerOptions": {
@@ -26,10 +27,10 @@
   "include": [
     "./config/jest/setupTests.ts",
     "./src/**/*.ts",
-    "./src/**/*.tsx",
-//    "./config/**/*.ts",
-//    "./config/**/*.tsx",
-//    "./webpack.config.ts",
-//    ".eslintrc.js"
+    "./src/**/*.tsx"
+    //    "./config/**/*.ts",
+    //    "./config/**/*.tsx",
+    //    "./webpack.config.ts",
+    //    ".eslintrc.js"
   ]
 }
