--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
   "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.20.12",
+    "@babel/plugin-transform-runtime": "^7.22.7",
+    "@babel/plugin-transform-typescript": "^7.22.5",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
@@ -57,6 +59,7 @@
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "babel-loader": "^9.1.2",
+    "babel-plugin-i18next-extract": "^0.9.0",
     "circular-dependency-plugin": "^5.2.2",
     "concurrently": "^7.6.0",
     "copy-webpack-plugin": "^11.0.0",
@@ -72,6 +75,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^6.2.0",
+    "fork-ts-checker-webpack-plugin": "^8.0.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.0",
     "identity-obj-proxy": "^3.0.0",
