--- a/package.json
+++ b/package.json
@@ -108,7 +108,9 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.15",
+    "@react-spring/web": "^9.7.3",
     "@reduxjs/toolkit": "^1.9.3",
+    "@use-gesture/react": "^10.2.27",
     "axios": "^1.3.4",
     "i18next": "^22.4.9",
     "i18next-browser-languagedetector": "^7.0.1",
