--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --env port=3000",
+    "start:vite": "vite --open --port 3001",
     "start:dev": "concurrently \"yarn run start\" \"yarn run start:dev:server\"",
+    "start:dev:vite": "concurrently \"yarn run start:vite\" \"yarn run start:dev:server\"",
     "start:dev:server": "node ./json-server/index.js",
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
@@ -58,6 +60,7 @@
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
+    "@vitejs/plugin-react": "^4.0.3",
     "babel-loader": "^9.1.2",
     "babel-plugin-i18next-extract": "^0.9.0",
     "circular-dependency-plugin": "^5.2.2",
@@ -102,6 +105,8 @@
     "ts-morph": "^19.0.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.5",
+    "vite": "^4.4.2",
+    "vite-plugin-svgr": "^3.2.0",
     "webpack": "^5.75.0",
     "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^5.0.1",
