--- a/package.json
+++ b/package.json
@@ -22,9 +22,9 @@
     "visual:report": "yarn run visual:report:json && yarn run visual:report:html && open-cli ./.loki/report.html",
     "visual:report:json": "node scripts/generate-visual-json-report.js",
     "visual:report:html": "reg-cli --from .loki/report.json --report .loki/report.html",
-    "storybook": "STORYBOOK_LOCALES=true start-storybook -p 6006 -c ./config/storybook -s ./public",
-    "storybook:build": "STORYBOOK_LOCALES=true build-storybook -c ./config/storybook -s public",
-    "storybook:build:ci": "build-storybook -c ./config/storybook -s ./public",
+    "storybook": "STORYBOOK_LOCALES=true sb dev -p 6006 -c ./config/storybook -s ../../public",
+    "storybook:build": "STORYBOOK_LOCALES=true sb build -c ./config/storybook -s public",
+    "storybook:build:ci": "sb build -c ./config/storybook -s public",
     "prepare": "husky install",
     "generate:slice": "node ./scripts/createSlice/index.js",
     "postinstall": "rm -rf ./node_modules/.cache"
@@ -38,14 +38,16 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.18.6",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
-    "@storybook/addon-actions": "^6.5.16",
-    "@storybook/addon-essentials": "^6.5.16",
-    "@storybook/addon-interactions": "^6.5.16",
-    "@storybook/addon-links": "^6.5.16",
-    "@storybook/builder-webpack5": "^6.5.16",
+    "@storybook/addon-actions": "^7.0.27",
+    "@storybook/addon-essentials": "^7.0.27",
+    "@storybook/addon-interactions": "^7.0.27",
+    "@storybook/addon-links": "^7.0.27",
+    "@storybook/builder-webpack5": "^7.0.27",
+    "@storybook/cli": "^7.0.27",
     "@storybook/manager-webpack5": "^6.5.16",
-    "@storybook/react": "^6.5.16",
-    "@storybook/testing-library": "^0.0.13",
+    "@storybook/react": "^7.0.27",
+    "@storybook/react-webpack5": "^7.1.0",
+    "@storybook/testing-library": "^0.2.0",
     "@svgr/webpack": "^6.5.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
@@ -77,6 +79,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-storybook": "^0.6.12",
     "eslint-plugin-unused-imports": "^3.0.0",
     "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^8.0.0",
@@ -87,7 +90,7 @@
     "jest-environment-jsdom": "^29.4.2",
     "jest-html-reporters": "^3.1.4",
     "json-server": "^0.17.2",
-    "loki": "^0.31.0",
+    "loki": "0.31.2",
     "mini-css-extract-plugin": "^2.7.2",
     "open-cli": "^7.1.0",
     "postcss": "^8.4.21",
