--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,70 @@
+#name: linting, testing, building
+#on:
+#  push:
+#    branches: [ master ]
+#  pull_request:
+#    branches: [ master ]
+#jobs:
+#  pipeline:
+#    strategy:
+#      matrix:
+#        os: [ ubuntu-latest ]
+#        node-version: [ 18.x ]
+#    runs-on: ${{ matrix.os }}
+#
+#    steps:
+#      - uses: actions/checkout@v2
+#      - name: Setup Node.js ${{ matrix.node-version }}
+#        uses: actions/setup-node@v1
+#        with:
+#          node-version: ${{ matrix.node-version }}
+#      - name: install modules
+#        run: yarn
+#      - name: build production project
+#        run: yarn run build:prod
+#        if: always()
+#      - name: linting typescript
+#        run: yarn run lint:ts
+#        if: always()
+#      - name: linting css
+#        run: yarn run lint:scss
+#        if: always()
+#      - name: unit testing
+#        run: yarn run test:unit
+#        if: always()
+#      - name: build storybook
+#        run: yarn run storybook:build:ci
+#        if: always()
+#      - name: screenshot testing
+#        run: yarn run test:ui:ci
+#        if: always()
+
 name: linting, testing, building
 on:
   push:
     branches: [ master ]
   pull_request:
     branches: [ master ]
+permissions:
+  contents: write
+  pages: write
+  id-token: write
+concurrency:
+  group: "pages"
+  cancel-in-progress: true
 jobs:
-  pipeline:
+  build-and-ui-testing:
+    runs-on: ubuntu-latest
+    concurrency: ci-${{ github.ref }}
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     strategy:
       matrix:
-        os: [ ubuntu-latest ]
         node-version: [ 18.x ]
-    runs-on: ${{ matrix.os }}
-
     steps:
       - uses: actions/checkout@v2
-      - name: Setup Node.js ${{ matrix.node-version }}
+      - name: Staring Node.js ${{ matrix.node-version }}
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node-version }}
@@ -23,19 +73,46 @@ jobs:
       - name: build production project
         run: yarn run build:prod
         if: always()
+      - name: build storybook
+        run: yarn run storybook:build
+        if: always()
+      - name: screenshot testing
+        run: yarn run test:ui:ci
+        if: always()
+      - name: Generate HTML report
+        run: yarn run visual:report
+        if: always()
+      - name: Setup Pages
+        uses: actions/configure-pages@v2
+        if: always()
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v1
+        if: always()
+        with:
+          path: '.loki'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        if: always()
+        uses: actions/deploy-pages@v1
+
+  checks:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [ 18.x ]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Staring Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: install modules
+        run: yarn
       - name: linting typescript
         run: yarn run lint:ts
         if: always()
       - name: linting css
         run: yarn run lint:scss
-        if: always()
       - name: unit testing
+        if: always()
         run: yarn run test:unit
-        if: always()
-      - name: build storybook
-        run: yarn run storybook:build:ci
-        if: always()
-      - name: screenshot testing
-        run: yarn run test:ui:ci
-        if: always()
-Please, rate this article!: Please, rate this article!
