--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "html-webpack-plugin": "^5.5.0",
     "husky": "^8.0.0",
     "identity-obj-proxy": "^3.0.0",
+    "isomorphic-fetch": "^3.0.0",
     "jest": "^29.4.2",
     "jest-environment-jsdom": "^29.4.2",
     "jest-html-reporters": "^3.1.4",
