--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,8 +76,14 @@ jobs:
       - name: screenshot testing
         run: yarn run test:ui:ci
         if: always()
+      - name: unit testing
+        if: always()
+        run: yarn run test:unit
       - name: Generate HTML report
         run: yarn run visual:report
+        if: always()
+      - name: move loki reports
+        run: mv .loki reports/
         if: always()
       - name: Setup Pages
         uses: actions/configure-pages@v2
@@ -86,7 +92,7 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         if: always()
         with:
-          path: '.loki'
+          path: 'reports'
       - name: Deploy to GitHub Pages
         id: deployment
         if: always()
