--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lint:scss": "npx stylelint \"**/*.scss\"",
     "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
     "test:unit": "jest --config ./config/jest/jest.config.ts",
+    "test:e2e": "cypress open",
     "test:ui": "yarn loki test",
     "test:ui:ok": "yarn loki approve",
     "test:ui:ci": "concurrently -s first -k \"yarn run storybook:ci\" \"yarn run test:ui\"",
@@ -71,6 +72,7 @@
     "concurrently": "^8.2.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.3",
+    "cypress": "^12.17.1",
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^34.0.0",
