--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -127,25 +127,19 @@ jobs:
         node-version: [ 18.x ]
     steps:
       - uses: actions/checkout@v2
-      - name: Staring Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: install modules
-        run: yarn
-      - name: start project
-        run: yarn run start:dev
-        if: always()
       - name: Run E2E tests
         uses: cypress-io/github-action@v5
         with:
-          install: false
+          start: yarn run start:dev
           browser: chrome
+          wait-on: 'http://localhost:3000'
 
       - name: Run Component Testing
         uses: cypress-io/github-action@v5
         with:
+          start: yarn run start:dev
           browser: chrome
+          wait-on: 'http://localhost:3000'
           # we have already installed everything
           install: false
           component: true
