wait-on: 'http://localhost:8880'

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -138,3 +138,4 @@ jobs:
           install: false
           start: yarn run start:dev
           browser: chrome
+          wait-on: 'http://localhost:8880'
