--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ concurrency:
   group: "pages"
   cancel-in-progress: true
 jobs:
-  build-and-ui-testing:
+  build:
     runs-on: ubuntu-latest
     concurrency: ci-${{ github.ref }}
     environment:
@@ -73,6 +73,24 @@ jobs:
       - name: build production project
         run: yarn run build:prod
         if: always()
+
+  ui-testing:
+    runs-on: ubuntu-latest
+    concurrency: ci-${{ github.ref }}
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    strategy:
+      matrix:
+        node-version: [ 18.x ]
+    steps:
+      - uses: actions/checkout@v2
+      - name: Staring Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - name: install modules
+        run: yarn
       - name: screenshot testing
         run: yarn run test:ui:ci
         if: always()
@@ -141,7 +159,7 @@ jobs:
           wait-on: 'http://localhost:8880'
 
   deploy:
-    needs: [ e2e-tests, checks, build-and-ui-testing ]
+    needs: [ e2e-tests, checks, build, ui-testing ]
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -156,6 +174,8 @@ jobs:
         run: yarn
       - name: build production project
         run: yarn run build:prod
+      - name: rename dist to html
+        run: mv dist html
       - name: copy file via ssh password
         uses: appleboy/scp-action@v0.1.4
         with:
@@ -163,5 +183,6 @@ jobs:
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
-          source: "./dist/*"
+          rm: true
+          source: "html"
           target: ${{ secrets.REMOTE_FOLDER_LOCATION }}
