change source path in gh actions

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -172,5 +172,5 @@ jobs:
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
           rm: true
-          source: "html"
+          source: "./html/*"
           target: ${{ secrets.REMOTE_FOLDER_LOCATION }}
