--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -140,7 +140,7 @@ jobs:
           wait-on: 'http://localhost:8880'
 
   deploy:
-    needs: [ e2e-tests, checks, build, ui-testing ]
+    needs: [ checks, build, ui-testing ]
     runs-on: ubuntu-latest
     strategy:
       matrix:
