--- a/.lintstagedrc.json
+++ b/.lintstagedrc.json
@@ -1,3 +1,6 @@
 {
-    "**/*.{ts,tsx,json}": ["eslint --fix", "prettier --write"]
+  "**/*.{ts,tsx}": [
+    "eslint --fix",
+    "prettier --write"
+  ]
 }
