--- a/.prettierignore
+++ b/.prettierignore
@@ -1,9 +1,9 @@
 # Ignore artifacts:
-build
-dist
-coverage
-node_modules
-storybook-static
+/build
+/dist
+/coverage
+/node_modules
+/storybook-static
 *.html
 *.css
 *.scss
